<?xml version="1.0"?>
<package>
  <name>teraranger_hub_multiflex</name>
  <version>1.0.0</version>
  <description>The teraranger_hub_multiflex package</description>

  <maintainer email="krzysztof.zurad@terabee.com">Krzysztof Zurad</maintainer>
  <maintainer email="matuesz.sadowski@terabee.com">Mateusz Sadowski</maintainer>
  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>
  <author email="luis.rodrigues@terabee.com">Luis Rodrigues</author>
  <url type="repository">https://github.com/Terabee/teraranger_hub_multiflex</url>
  <url type="website">http://wiki.ros.org/teraranger_hub_multiflex</url>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
